# EZ-RASSOR-Arm-ROS2-Conversion

./: .gitignore  README.md  rerassor-arm.ino
action_interfaces/: CMakeLists.txt  package.xml
autonomous_control/autonomous_control/: package.xml  setup.cfg  setup.py
autonomous_control/autonomous_control/autonomous_control/: ai_objects.py  auto_functions.py  autonomous_control.py  camera_image.py  instructions.txt  nav_functions.py  obstacle_detection.py  pointcloud_processor.py  publisher.py  simulation_interact.py  utility_functions.py
autonomous_control/autonomous_control/launch/: autonomous_control.py  autonomous_control_old.py
ezrassor_arm_moveit_ros2/: package.xml  setup.cfg  setup.py
ezrassor_arm_moveit_ros2/config/: controllers.yaml  ezrassor.srdf  fake_controllers.yaml  joint_limits.yaml  joint_names.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml
ezrassor_arm_moveit_ros2/launch/: example.py  ezrassor_arm_moveit_ros2.py  ezrassor_moveit_controller_manager.launch.xml  move_group.launch  move_group.py  move_group_new.py  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_context.py  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
ezrassor_arm_moveit_ros2/launch_old/: ezrassor_arm_moveit_ros2.py  move_group.launch.xml  ompl_planning_pipeline.launch.xml  planning_context.launch.xml  planning_pipeline.launch.xml  sensor_manager.launch.xml  trajectory_execution.launch.xml
ezrassor_arm_moveit_ros2/urdf/: arm_model.urdf  arm_model.urdf.xacro
ezrassor_controller/: .gitignore  App.js  README.org  app.json  package-lock.json  package.json
ezrassor_controller/src/api/: ezrassor-service-paver-arm.js  (+1 more)
ezrassor_controller_server/: .flake8  package.xml  pyproject.toml  setup.cfg  setup.py
ezrassor_controller_server/.github/workflows/: build.yml
ezrassor_controller_server/docs/: README.md
ezrassor_controller_server/launch/: controller_server.py
ezrassor_controller_server/source/ezrassor_controller_server/: __init__.py  __main__.py  command.py  inverse_kinematics.py  moveit.py  request.py
ezrassor_controller_server/test/integ/ezrassor_controller_server/: test_controller_server.py
ezrassor_controller_server/test/unit/: test_command.py  test_request.py
ezrassor_serial/: package.xml  setup.cfg  setup.py
ezrassor_serial/Arduino/rerassor-arm/: rerassor-arm.ino
ezrassor_serial/Arduino/rerassor-arm-main/: rerassor-arm-autonomous.ino  rerassor-arm-main.ino  rerassor-arm-manual.ino
ezrassor_serial/Arduino/rerassor-arm-main_new/: rerassor-arm-autonomous.ino  rerassor-arm-manual.ino
ezrassor_serial/Arduino/rerassor-arm/libraries/Ramps-master/src/: DeltaRamps.h  PololuDriver.h  Ramps.h
ezrassor_serial/docs/: README.md
ezrassor_serial/launch/: ezrassor_serial.py
ezrassor_serial/source/paver_arm_manual_serial_driver/: __main__.py
ezrassor_serial/source/paver_arm_serial_driver/: __init__.py  __main__.py
ezrassor_sim_description/: package.xml  setup.cfg  setup.py
ezrassor_sim_description/blender/: EZRASSOR.blend
ezrassor_sim_description/config/: controllers.yaml  controllers_auto.yaml  controllers_manual.yaml
ezrassor_sim_description/launch/: ezrassor_auto_functions.py  spawn_ezrassor.py  spawn_ezrassor_auto.py  spawn_ezrassor_manual.py
ezrassor_sim_description/meshes/: drum.dae
ezrassor_sim_description/urdf/: camera.xacro  cameratemp.xacro  drum.xacro  drum_arm.xacro  ezrassor.xacro.urdf  ezrassor_arm.xacro.urdf  ezrassor_arm_kartik.xacro.urdf  ezrassor_paver_arm.xacro.urdf  ezrassor_paver_arm_rover.xacro.urdf  ezrassor_paver_arm_rover_auto.xacro.urdf  ezrassor_paver_arm_rover_manual.xacro.urdf  imu.xacro  macros.xacro  materials.xacro  paver_arm.xacro  wheel.xacro
msgsrc_interfaces/: CMakeLists.txt  package.xml
msgsrc_interfaces/msg/: Path.msg
msgsrc_interfaces/srv/: WaypointPath.srv
pymoveit2/: CMakeLists.txt
pymoveit2/examples/: joint_goal.py  pose_goal.py
pymoveit2/ezrassor/: pose_goal.py
pymoveit2/pymoveit2/: moveit2.py
(+28 files in other folders)
