<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>autonomous_control</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wilk.nathan@gmail.com">nate</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf_transformations</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- Image_geometry -->
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>

  <!-- Action Interface package by Nate -->
  <exec_depend>action_interfaces</exec_depend>
  

  <!-- msg & srv Interface package by Nate -->
  <exec_depend>msgsrc_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
